--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Example Form</title>
 
-    <!-- JQUERY -->
+    <script src="./lib/paho-mqtt-min.js"></script>
 </head>
 <body>
 <div class="container" id="content">
