Index shows status of connection.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 <body>
 <div class="container" id="content">
 
+
+<p id="connectionDetails">
+    MQTT Client connection to <span id="brokerName">host</span>:<span id="brokerPort">0000</span> status:
+    <span id="clientStatus">disconnected</span>.
+</p>
 </div>
 
 <script src="./main.js"></script>
