--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Example Form</title>
 
+    <!-- used to make the form look pretty -->
+    <link href="https://stackpath.bootstrapcdn.com/bootswatch/4.1.3/materia/bootstrap.min.css" type="text/css"
+          rel="stylesheet">
+
     <script src="lib/paho-mqtt.min.js"></script>
     <!-- You can put your config variables here: -->
     <!--
@@ -23,7 +27,7 @@
 <div class="container" id="content">
     <form>
         <fieldset>
-            <legend>Legend</legend>
+            <legend>Data to send via MQTT</legend>
             <div class="form-group row">
                 <label for="staticEmail" class="col-sm-2 col-form-label">Email</label>
                 <div class="col-sm-10">
@@ -107,11 +111,13 @@
             <button onclick="sendFormData()" class="btn btn-primary">Send</button>
         </fieldset>
     </form>
-
-    <p id="connectionDetails">
-        MQTT Client connection to <span id="brokerName">host</span>:<span id="brokerPort">0000</span> status:
-        <span id="clientStatus">disconnected</span>.
-    </p>
+    <div class="card border-danger mt-3" id="connectionDetails">
+        <div class="card-header">Connection Details</div>
+        <div class="card-body">
+            <p class="card-text">MQTT Client connection to <span id="brokerName">host</span>:<span id="brokerPort">0000</span> status:
+                <span id="clientStatus">disconnected</span>.</p>
+        </div>
+    </div>
 </div>
 
 <script src="./main.js"></script>
