Fix form -> json logic.

--- a/example-form.html
+++ b/example-form.html
@@ -26,7 +26,7 @@
 </head>
 <body>
 <div class="container" id="content">
-    <form>
+    <form onsubmit="return false;">
         <fieldset>
             <legend>Data to send via MQTT</legend>
             <div class="form-group row">
